# eisaku-changes

./: .env.example  .gitignore  README.md  WEBSOCKET_NOTIFICATION_STRATEGY.md  alembic.ini  env_sample  pyproject.toml  test_websocket.html  test_websocket_connections.py
alembic/: env.py
alembic/versions/: 0083030a72e7_advance_payment_model_modification.py  01ab9072deaf_add_desc_string.py  023e04079da2_trip_document_model_add.py  07180a458d2f_updated_the_conficting_issues_in_model_.py  0803f51b9961_origin_destination_link_up_city.py  1313c97f110c_enum_updated_for_trip_document.py  17a4169d4ec7_add_notifcations.py  17e6b25637c8_vendor_registration_model_name.py  19cb4c232a7d_init_tables.py  1ade47651d6f_merge_complaint_and_other_changes.py  1c2e4c6a9ac2_trip_model_update.py  1c79457adb00_trip_vendor_model_modify.py  1ea141da28c6_trip_model_enum_update.py  1f25fc9d94ac_trip_driver_model_added.py  251647e1c7a4_region_added_to_employee_model.py  25a07ed30c9c_making_field_validations.py  26b5f4a81303_branch_employee.py  28f9f36e8015_remove_notifcations_fields.py  2b5b5bc247d2_updated_enum_for_vendor.py  2fbde5139d30_approval_history_maintain.py  329fc5a1af19_add_desc_string.py  34f1ab7811e3_model_update.py  3da11a07c0cd_model_update.py  3db1ecd96a4c_customer_add.py  3db48b8af89d_add_target_module.py  (+65 more)
docs/: API_Documentation.md  Dev Deployment Guide.md  Notification_System_Usage.md  Staging Deployment Guide.md  TMS_API_Postman_Collection.json  User_List_Optimization_Analysis.md
src/: email.json  main.py  permissions.json  region-wise-state.json
src/api/: deps.py
(+138 files in other folders)
